--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 95vh;
+    background-color: #ef476f;
+    gap: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1{
+    margin-bottom: 0px; 
+    margin-top: 10px;
+    font-size: xx-large;
 }
