--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     align-items: center;
     flex-direction: column;
     height: 95vh;
-    background-color: #ef476f;
+    background-color: peachpuff;
     gap: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
